--- a/src/components/clock/clock.html
+++ b/src/components/clock/clock.html
@@ -13,6 +13,7 @@
   <div class="g10 rotateGears2"></div>
   <div class="g11"></div>
   <div class="clock"></div>
+  <div class="clock2"></div>
   <div #containerSeconds id="containerSeconds" class="containerSeconds" [ngStyle]="{transform: rotate(hands['seconds'])}"><div class="secondsHnd rotateSeconds"></div></div>
   <div #containerMinutes id="containerMinutes" class="containerMinutes" [ngStyle]="{transform: rotate(hands['minutes'])}"><div class="minutesHnd rotateMinutes"></div></div>
   <div #containerHours   id="containerHours"   class="containerHours"   [ngStyle]="{transform: rotate(hands['hours'])}"><div class="hoursHnd rotateHours"    ></div></div>
