Out-commented spinners

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -5,4 +5,20 @@ page-settings {
     .header-exists {
     margin-top: 50px;
   }
+
+  .perfectly-normal-divider {
+    .item-inner {
+      .input-wrapper {
+      }
+    }
+  }
+
+  .perfectly-normal-button {
+    background: transparent;
+    box-shadow: 0;
+
+  }
+  .perfectly-normal-icon {
+
+  }
 }
