Lots of updates and bug fixes and whatnot

--- a/src/components/clock/clock.scss
+++ b/src/components/clock/clock.scss
@@ -95,7 +95,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/gears.png");
+    background: url("../assets/images/clock/gears.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -111,7 +111,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g1.png");
+    background: url("../assets/images/clock/g1.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -130,7 +130,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g9-16.png");
+    background: url("../assets/images/clock/g9-16.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -149,7 +149,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g3.png");
+    background: url("../assets/images/clock/g3.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -166,7 +166,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g4-7.png");
+    background: url("../assets/images/clock/g4-7.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -185,7 +185,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/gear1.png");
+    background: url("../assets/images/clock/gear1.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -204,7 +204,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g6-18.png");
+    background: url("../assets/images/clock/g6-18.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -223,7 +223,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g9-8.png");
+    background: url("../assets/images/clock/g9-8.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -257,7 +257,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/g4-7.png");
+    background: url("../assets/images/clock/g4-7.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -276,7 +276,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/910-8.png");
+    background: url("../assets/images/clock/910-8.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -300,7 +300,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/roman-num.png");
+    background: url("../assets/images/clock/roman-num.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -409,7 +409,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/clock.png");
+    background: url("../assets/images/clock/clock.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -428,7 +428,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/clock2.png");
+    background: url("../assets/images/clock/clock2.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -444,7 +444,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/Seconds-hand.png");
+    background: url("../assets/images/clock/Seconds-hand.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -460,7 +460,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/minutes-hand.png");
+    background: url("../assets/images/clock/minutes-hand.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -476,7 +476,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("/assets/images/clock/hours-hand.png");
+    background: url("../assets/images/clock/hours-hand.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
