--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,8 +15,19 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
-ion-content div.scroll-content{
-  margin-bottom: 55px;
+// ion-content div.scroll-content{
+ion-content {
+    margin-top: 56px !important;
+    margin-bottom: 56px;
+    height: calc(100% - 56px - 56px);
+  // margin-bottom: 55px;
+}
+div.fixed-content {
+  margin-top: unset !important;
+  display: none;
+}
+div.scroll-content {
+  margin-top: unset !important;
 }
 
 .loading-md .loading-wrapper {
@@ -77,21 +88,42 @@ ion-content div.scroll-content{
 }
 .ion-item-button-like {
   cursor: pointer;
-  :hover {
+  &:hover {
     background-color: rgba(0, 0, 128, 0.02);
   }
-  :active {
+  &:active {
     background-color: rgba(0, 0, 255, 0.3);
   }
 }
 
 .app-title {
-
+  .toolbar-title {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: center;
+  }
+}
+.app-page-title {
+  flex: 1 0 auto;
+  align-self: baseline;
 }
 
+// .app-title {
+//   @extend ion-title;
+//   @extend .toolbar-title;
+//   @extend .toolbar-title-md;
+//   @extend .toolbar-title-ios;
+// }
+
 .app-user {
+  flex: 1 0 auto;
+  align-self: baseline;
   text-align: center;
   font-size: 12px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .waiting-clock {
