--- a/src/pages/fancy-select/fancy-select.scss
+++ b/src/pages/fancy-select/fancy-select.scss
@@ -74,6 +74,18 @@ page-fancy-select {
   }
   .fancy-select-period-title {
     text-align: center;
-
+    // margin-left: auto;
+    // margin-right: auto;
+    // overflow: hidden;
+    // max-width: 45%;
+    // display: flex;
+  }
+  .fancy-select-period {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    max-width: 45%;
+    display: flex;
   }
 }
