--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -109,7 +109,7 @@ page-home {
     }
   }
   span.normal-txt {
-    color: black;
+    // color: black;
   }
   .header-close-button {
     color: black !important;
@@ -128,11 +128,15 @@ page-home {
   }
   ion-list>ion-item.ion-item-button-like {
     cursor: pointer;
-    :hover {
-      background-color: rgba(0, 0, 128, 0.02);
+    &:hover {
+      background-color: rgba(0, 0, 128, 0.2);
     }
-    :active {
-      background-color: rgba(0, 0, 255, 0.3);
+    &:active {
+      background-color: rgba(0, 0, 255, 0.7);
+      color: white;
+      span.normal-text {
+        color: white;
+      }
     }
   }
   .home-card-header-payroll-period {
