--- a/src/pages/report-history/report-history.scss
+++ b/src/pages/report-history/report-history.scss
@@ -25,19 +25,41 @@ page-report-history {
   .reportList {}
   .report-history-list-item-sliding {
     cursor: pointer;
-    :hover {
-      background-color: rgba(0, 0, 128, 0.02);
+    background-color: transparent;
+    &:hover {
+      background-color: rgba(0, 0, 128, 0.3);
     }
-    :active {
-      background-color: rgba(0, 0, 255, 0.3);
+    &:active {
+      background-color: rgba(0, 0, 255, 0.5);
     }
+    .ion-item {
+      background-color: transparent;
+    }
+
   }
   ion-item.report-history-list-item {
+    -webkit-tap-highlight-color: unset !important;
+    background-color: transparent;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    .item-inner {
+      background-color: transparent;
+      .input-wrapper {
+        background-color: transparent;
+        ion-label {
+          background-color: transparent;
+          div {
+            background-color: transparent;
+            span {
+              background-color: transparent;
+            }
+          }
+        }
+      }
+    }
     div.report-history-report-item {
       display: flex;
       flex-direction: row;
@@ -55,8 +77,6 @@ page-report-history {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
-     :hover  {}
-     :active {}
   }
   .ionic-button-icon-outline {
       background-color: transparent !important;
@@ -100,5 +120,11 @@ page-report-history {
       width: 100px;
       text-overflow: ellipsis;
     }
+  }
+  .item-group-id, .item-group-rev {
+    font-size: 12px;
+  }
+  .item-id-label, .item-rev-label {
+    margin-right: 5px;
   }
 }
