--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -53,10 +53,10 @@ page-tech-settings {
     min-height: 20px;
   }
   div.scroll-content {
-    height: 80%;
-    margin-top: 50px;
-    padding-bottom: 200px;
-    margin-bottom: 300px;
+    // height: 80%;
+    // margin-top: 50px;
+    // padding-bottom: 200px;
+    // margin-bottom: 300px;
   }
   .tech-settings-select-item {
     .input-wrapper {
