iOS SCSS updates

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="waiting-clock" *ngIf="!ud.isAppLoaded()">
   <clock></clock>
 </div>
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-nav class="ionic-root-nav-element" [root]="rootPage"></ion-nav>
 
