--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,8 @@
-  body>ion-app>ion-popover>div>div.popover-content>div>page-popover-template>ion-content>div.scroll-content {
+  page-popover-template>ion-content>div.scroll-content {
     height: 300vh;
   }
 
-  body>ion-app>ion-popover>div>div.popover-content>div>page-popover-template>ion-content>div.scroll-content>button {
+  page-popover-template>ion-content>div.scroll-content>button {
     margin-bottom: 1500px;
   }
 
