iOS Popover template update (for home help screen)
Yep.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -191,3 +191,7 @@ ion-app.ios .scroll-content {
   padding-bottom: 100px;
   margin-top: 2px !important;
 }
+
+ion-popover.popover-template.popover-ios .scroll-content {
+  padding-bottom: 150px;
+}
