iOS SCSS update again
Yep

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -188,10 +188,6 @@ ion-app.ios .waiting-clock {
 }
 
 ion-app.ios .scroll-content {
-  padding-bottom: 100px;
+  padding-bottom: 100px !important;
   margin-top: 2px !important;
-}
-
-ion-popover.popover-template.popover-ios .scroll-content {
-  padding-bottom: 150px;
 }
