Some slight changes that are mostly nonsense

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,4 @@
+<!-- <div class="waiting-clock" *ngIf="!ud.isAppLoaded()" [ngStyle]="{zoom: ud.clockZoom}"> -->
 <div class="waiting-clock" *ngIf="!ud.isAppLoaded()">
   <clock></clock>
 </div>
