Updates for settings, messages, version number

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -29,4 +29,13 @@ page-settings {
   .settings-app-version {
     cursor: pointer;
   }
+
+  .settings-advanced-button {
+    color: transparent;
+    background: transparent;
+  }
+  .settings-advanced-icon {
+    color: transparent;
+    background: transparent;
+  }
 }
