Login page and userdata updates

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,10 @@
 page-login {
 	.loginerror {}
+  p.login-version {
+    text-align: center;
+    font-weight: bold !important;
+    color: black !important;
+  }
 	p {
 		font-size: 1.6rem !important;
 		color: #ffffff !important;
@@ -8,5 +13,5 @@ page-login {
 	}
 	.invalid {
 		border: 1px solid #ea6153;
-	}
+  }
 }
