--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -104,11 +104,11 @@ ion-app.ios ion-content > .scroll-content {
 .alert-message {
   overflow-y: auto;
 }
-.ion-item-button-like {
+.ion-item-button-like, .ion-button-like {
   cursor: pointer;
-  &:hover {
-    background-color: rgba(0, 0, 128, 0.02);
-  }
+  // &:hover {
+  //   background-color: rgba(0, 0, 128, 0.02);
+  // }
   &:active {
     background-color: rgba(0, 0, 255, 0.3);
   }
